--- a/quienes-somos.html
+++ b/quienes-somos.html
@@ -25,37 +25,117 @@
           <li><a href="registro.html">Registro</a></li>
         </ul>
       </nav>
-    </header>
-
-    <!-- CONTENIDO -->
+    </header>    <!-- ============================ MAIN =========================== -->
     <main>
-      <section>
-        <h2>Nuestra historia</h2>
-        <p>
-          MatchHogar nació con la misión de facilitar el acceso a soluciones de
-          vivienda compartida e inversiones colaborativas. Creemos que quienes
-          comparten intereses y valores pueden mejorar notablemente su calidad
-          de vida cuando se unen para alcanzar objetivos comunes.
-        </p>
-        <p>
-          Nuestro equipo combina experiencia en el sector inmobiliario,
-          tecnología y economía colaborativa para ofrecer una plataforma segura
-          y eficiente.
-        </p>
+      <section class="hero about-hero">
+        <div class="container">
+          <h1>Quiénes Somos</h1>
+          <p class="tagline">
+            Conectando personas, creando hogares, construyendo comunidad
+          </p>
+        </div>
       </section>
 
-      <section>
-        <h2>Nuestros valores</h2>
-        <ul>
-          <li>Confianza y transparencia</li>
-          <li>Inclusión y diversidad</li>
-          <li>Innovación continua</li>
-          <li>Sostenibilidad</li>
-        </ul>
+      <section class="about-section">
+        <div class="container">
+          <div class="about-grid">
+            <div class="about-content">
+              <h2>Nuestra Historia</h2>
+              <p>
+                MatchHogar nació con la misión de facilitar el acceso a soluciones de
+                vivienda compartida e inversiones colaborativas. Creemos que quienes
+                comparten intereses y valores pueden mejorar notablemente su calidad
+                de vida cuando se unen para alcanzar objetivos comunes.
+              </p>
+              <p>
+                Como plataforma líder en España para la conexión de personas con necesidades
+                similares en vivienda, nos enorgullece facilitar relaciones duraderas y
+                experiencias habitacionales positivas.
+              </p>
+              <p>
+                Nuestro equipo combina experiencia en el sector inmobiliario,
+                tecnología y economía colaborativa para ofrecer una plataforma segura
+                y eficiente que hace realidad las aspiraciones de vivienda de nuestros usuarios.
+              </p>
+            </div>
+            <div class="about-image">
+              <img src="assets/about-team.jpg" alt="Equipo MatchHogar" />
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <section class="values-section">
+        <div class="container">
+          <h2>Nuestros Valores</h2>
+          <div class="values-grid">
+            <div class="value-card">
+              <div class="value-icon">
+                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor">
+                  <path d="M12 21a9 9 0 1 0 0-18 9 9 0 0 0 0 18z"/>
+                  <path d="M12 13a3 3 0 1 0 0-6 3 3 0 0 0 0 6z"/>
+                </svg>
+              </div>
+              <h3>Transparencia</h3>
+              <p>Creemos en la honestidad y la claridad en todas nuestras interacciones.</p>
+            </div>
+            <div class="value-card">
+              <div class="value-icon">
+                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor">
+                  <path d="M4 12v8a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2v-8"/>
+                  <path d="M16 6l-4-4-4 4"/>
+                  <path d="M12 2v13"/>
+                </svg>
+              </div>
+              <h3>Confianza</h3>
+              <p>Construimos relaciones sólidas basadas en la confianza mutua.</p>
+            </div>
+            <div class="value-card">
+              <div class="value-icon">
+                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor">
+                  <path d="M20.84 4.61a5.5 5.5 0 0 0-7.78 0L12 5.67l-1.06-1.06a5.5 5.5 0 0 0-7.78 7.78l1.06 1.06L12 21.23l7.78-7.78 1.06-1.06a5.5 5.5 0 0 0 0-7.78z"/>
+                </svg>
+              </div>
+              <h3>Comunidad</h3>
+              <p>Fomentamos conexiones significativas y duraderas entre nuestros usuarios.</p>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <section class="stats-section">
+        <div class="container">
+          <div class="stats-grid">
+            <div class="stat-card">
+              <h3>25k+</h3>
+              <p>Usuarios Activos</p>
+            </div>
+            <div class="stat-card">
+              <h3>10k+</h3>
+              <p>Matches Exitosos</p>
+            </div>
+            <div class="stat-card">
+              <h3>1k+</h3>
+              <p>Colaboradores</p>
+            </div>
+            <div class="stat-card">
+              <h3>4.8/5</h3>
+              <p>Satisfacción</p>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <section class="cta-section">
+        <div class="container">
+          <h2>¿Listo para encontrar tu match perfecto?</h2>
+          <p>Únete a nuestra comunidad y encuentra las personas ideales para compartir tu próximo hogar.</p>
+          <a href="registro.html" class="btn btn-primary">Comenzar Ahora</a>
+        </div>
       </section>
     </main>
 
-    <!-- FOOTER -->
+    <!-- =========================== FOOTER ========================== -->
     <footer>
       <p>&copy; 2025 MatchHogar. Todos los derechos reservados.</p>
       <p>
