--- a/que-ofrecemos.html
+++ b/que-ofrecemos.html
@@ -25,32 +25,204 @@
           <li><a href="registro.html">Registro</a></li>
         </ul>
       </nav>
-    </header>
-
-    <!-- CONTENIDO -->
+    </header>    <!-- ============================ MAIN =========================== -->
     <main>
-      <section>
-        <h2>Servicios para usuarios</h2>
-        <p>
-          <strong>Usuario Básico:</strong> acceso gratuito al registro y al
-          buscador básico de coincidencias.
-        </p>
-        <p>
-          <strong>Usuario Premium:</strong> coincidencias avanzadas, filtros
-          detallados y prioridad en resultados por 4,99&nbsp;€/mes.
-        </p>
+      <section class="hero services-hero">
+        <div class="container">
+          <h1>Qué Ofrecemos</h1>
+          <p class="tagline">
+            Soluciones integrales para todas tus necesidades de vivienda compartida
+          </p>
+        </div>
       </section>
 
-      <section>
-        <h2>Servicios para colaboradores</h2>
-        <p>
-          Por 49,90&nbsp;€ tendrás acceso para publicar propiedades y ofertas
-          dirigidas a una comunidad segmentada por intereses.
-        </p>
+      <section class="services-section">
+        <div class="container">
+          <div class="services-grid">
+            <div class="service-card">
+              <div class="service-icon">
+                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor">
+                  <path d="M3 9l9-7 9 7v11a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2z"/>
+                  <polyline points="9 22 9 12 15 12 15 22"/>
+                </svg>
+              </div>
+              <h3>Viviendas Compartidas</h3>
+              <p>Encuentra el compañero de piso ideal o la vivienda perfecta para compartir.</p>
+              <ul class="service-features">
+                <li>Búsqueda personalizada</li>
+                <li>Filtros avanzados</li>
+                <li>Verificación de perfiles</li>
+                <li>Chat seguro integrado</li>
+              </ul>
+            </div>
+
+            <div class="service-card">
+              <div class="service-icon">
+                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor">
+                  <rect x="3" y="3" width="18" height="18" rx="2"/>
+                  <path d="M3 9h18"/>
+                  <path d="M9 21V9"/>
+                </svg>
+              </div>
+              <h3>Inversiones Inmobiliarias</h3>
+              <p>Conecta con otros inversores para proyectos inmobiliarios conjuntos.</p>
+              <ul class="service-features">
+                <li>Análisis de mercado</li>
+                <li>Propuestas de inversión</li>
+                <li>Due diligence</li>
+                <li>Asesoramiento legal</li>
+              </ul>
+            </div>
+
+            <div class="service-card">
+              <div class="service-icon">
+                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor">
+                  <path d="M21 11.5a8.38 8.38 0 0 1-.9 3.8 8.5 8.5 0 0 1-7.6 4.7 8.38 8.38 0 0 1-3.8-.9L3 21l1.9-5.7a8.38 8.38 0 0 1-.9-3.8 8.5 8.5 0 0 1 4.7-7.6 8.38 8.38 0 0 1 3.8-.9h.5a8.48 8.48 0 0 1 8 8v.5z"/>
+                </svg>
+              </div>
+              <h3>Asesoramiento Profesional</h3>
+              <p>Accede a una red de profesionales del sector inmobiliario.</p>
+              <ul class="service-features">
+                <li>Agentes inmobiliarios</li>
+                <li>Asesores financieros</li>
+                <li>Abogados especializados</li>
+                <li>Gestores de patrimonio</li>
+              </ul>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <section class="pricing-section">
+        <div class="container">
+          <h2>Nuestros Planes</h2>
+          <div class="pricing-grid">
+            <!-- Plan Básico -->
+            <div class="pricing-card">
+              <div class="pricing-header">
+                <h3>Usuario Básico</h3>
+                <p class="price">Gratis</p>
+              </div>
+              <ul class="pricing-features">
+                <li>Perfil personal básico</li>
+                <li>Búsqueda de coincidencias</li>
+                <li>Mensajería básica</li>
+                <li>Alertas de nuevas oportunidades</li>
+              </ul>
+              <a href="registro.html" class="btn btn-outline">Comenzar gratis</a>
+            </div>
+
+            <!-- Plan Premium -->
+            <div class="pricing-card featured">
+              <div class="pricing-badge">Más popular</div>
+              <div class="pricing-header">
+                <h3>Usuario Premium</h3>
+                <p class="price">4,99 €<span>/mes</span></p>
+              </div>
+              <ul class="pricing-features">
+                <li>Todas las características básicas</li>
+                <li>Perfil destacado</li>
+                <li>Filtros avanzados</li>
+                <li>Chat ilimitado</li>
+                <li>Prioridad en matches</li>
+                <li>Soporte preferente</li>
+              </ul>
+              <a href="registro.html" class="btn btn-primary">Suscribirse ahora</a>
+            </div>
+
+            <!-- Plan Colaborador -->
+            <div class="pricing-card">
+              <div class="pricing-header">
+                <h3>Colaborador</h3>
+                <p class="price">49,90 €<span>/alta</span></p>
+              </div>
+              <ul class="pricing-features">
+                <li>Portal profesional</li>
+                <li>Gestión de propiedades</li>
+                <li>Publicación de anuncios</li>
+                <li>Dashboard especializado</li>
+                <li>Análisis de mercado</li>
+                <li>Soporte prioritario</li>
+              </ul>
+              <a href="registro.html" class="btn btn-outline">Unirse como colaborador</a>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <section class="features-section">
+        <div class="container">
+          <h2>Características Destacadas</h2>
+          <div class="features-grid">
+            <div class="feature-item">
+              <div class="feature-icon">🔒</div>
+              <h3>Seguridad Garantizada</h3>
+              <p>Verificación de identidad y perfiles para mayor seguridad.</p>
+            </div>
+            <div class="feature-item">
+              <div class="feature-icon">🤝</div>
+              <h3>Matching Inteligente</h3>
+              <p>Algoritmo avanzado para encontrar las mejores coincidencias.</p>
+            </div>
+            <div class="feature-item">
+              <div class="feature-icon">💬</div>
+              <h3>Chat Integrado</h3>
+              <p>Comunicación directa y segura entre usuarios.</p>
+            </div>
+            <div class="feature-item">
+              <div class="feature-icon">📊</div>
+              <h3>Análisis de Mercado</h3>
+              <p>Datos actualizados del mercado inmobiliario.</p>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <section class="testimonials-section">
+        <div class="container">
+          <h2>Lo que dicen nuestros usuarios</h2>
+          <div class="testimonials-grid">
+            <div class="testimonial-card">
+              <div class="testimonial-content">
+                <p>"Encontré el compañero de piso perfecto en menos de una semana. El proceso fue muy sencillo y seguro."</p>
+              </div>
+              <div class="testimonial-author">
+                <img src="assets/user-1.jpg" alt="Ana M." />
+                <div>
+                  <h4>Ana M.</h4>
+                  <p>Usuario Premium</p>
+                </div>
+              </div>
+            </div>
+            <div class="testimonial-card">
+              <div class="testimonial-content">
+                <p>"Como agente inmobiliario, MatchHogar me ha ayudado a expandir mi negocio y encontrar clientes ideales."</p>
+              </div>
+              <div class="testimonial-author">
+                <img src="assets/user-2.jpg" alt="Carlos R." />
+                <div>
+                  <h4>Carlos R.</h4>
+                  <p>Colaborador</p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <section class="cta-section">
+        <div class="container">
+          <h2>¿Listo para comenzar?</h2>
+          <p>Únete a miles de usuarios que ya han encontrado su match perfecto.</p>
+          <div class="cta-buttons">
+            <a href="registro.html" class="btn btn-primary">Registrarse ahora</a>
+            <a href="quienes-somos.html" class="btn btn-outline">Saber más</a>
+          </div>
+        </div>
       </section>
     </main>
 
-    <!-- FOOTER -->
+    <!-- =========================== FOOTER ========================== -->
     <footer>
       <p>&copy; 2025 MatchHogar. Todos los derechos reservados.</p>
       <p>
