--- a/registro.html
+++ b/registro.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>MatchHogar | Registro</title>
+    <title>MatchHogar | Planes y Registro</title>
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
@@ -39,7 +39,7 @@
             <li>Perfil personal</li>
             <li>Conexiones limitadas</li>
           </ul>
-          <button type="button" class="btn btn-primary" onclick="mostrarFormulario('basico')">Registrarse Gratis</button>
+          <a href="registro-basico.html" class="btn btn-primary">Registrarse Gratis</a>
         </div>
 
         <!-- Plan Premium -->
@@ -52,21 +52,23 @@
             <li>Búsquedas avanzadas</li>
             <li>Conexiones ilimitadas</li>
             <li>Prioridad en matches</li>
+            <li>Y mucho más...</li>
           </ul>
-          <button type="button" class="btn btn-primary" onclick="mostrarFormulario('premium')">Suscribirse</button>
+          <a href="registro-premium.html" class="btn btn-primary">Comenzar Ahora</a>
         </div>
 
         <!-- Plan Colaborador -->
         <div class="plan-card">
           <h2>Colaborador</h2>
-          <p class="plan-price">49,90 €<span>/alta</span></p>
+          <p class="plan-price">14,99 €<span>/mes</span></p>
           <ul class="plan-features">
             <li>Portal profesional</li>
             <li>Gestión de propiedades</li>
             <li>Publicación de anuncios</li>
             <li>Dashboard especializado</li>
+            <li>Y mucho más...</li>
           </ul>
-          <button type="button" class="btn btn-primary" onclick="mostrarFormulario('colaborador')">Registrarse como Colaborador</button>
+          <a href="registro-colaborador.html" class="btn btn-primary">Hazte Colaborador</a>
         </div>
       </div>
 
