--- a/quienes-somos.html
+++ b/quienes-somos.html
@@ -42,24 +42,25 @@
             <div class="about-content">
               <h2>Nuestra Historia</h2>
               <p>
-                MatchHogar nació con la misión de facilitar el acceso a soluciones de
-                vivienda compartida e inversiones colaborativas. Creemos que quienes
-                comparten intereses y valores pueden mejorar notablemente su calidad
-                de vida cuando se unen para alcanzar objetivos comunes.
+                En MatchHogar transformamos la manera en que las personas encuentran su hogar ideal.
+                Nacimos de una idea simple pero poderosa: crear una comunidad donde compartir
+                vivienda no solo sea más accesible, sino también más enriquecedor.
               </p>
               <p>
-                Como plataforma líder en España para la conexión de personas con necesidades
-                similares en vivienda, nos enorgullece facilitar relaciones duraderas y
-                experiencias habitacionales positivas.
+                Desde 2024, hemos ayudado a miles de personas a encontrar compañeros de piso
+                compatibles, inversores para proyectos inmobiliarios y oportunidades únicas
+                en el mercado de la vivienda. Nuestra plataforma no solo conecta espacios,
+                conecta personas con sueños similares.
               </p>
               <p>
-                Nuestro equipo combina experiencia en el sector inmobiliario,
-                tecnología y economía colaborativa para ofrecer una plataforma segura
-                y eficiente que hace realidad las aspiraciones de vivienda de nuestros usuarios.
+                Lo que nos hace únicos es nuestro compromiso con la seguridad y la
+                compatibilidad. Utilizamos tecnología avanzada para garantizar las mejores
+                coincidencias, mientras mantenemos el toque humano que hace que cada
+                conexión sea especial.
               </p>
             </div>
             <div class="about-image">
-              <img src="assets/about-team.jpg" alt="Equipo MatchHogar" />
+              <img src="assets/about-team.jpg" alt="Equipo MatchHogar trabajando en la oficina" />
             </div>
           </div>
         </div>
