--- a/quienes-somos.html
+++ b/quienes-somos.html
@@ -38,29 +38,84 @@
 
       <section class="about-section">
         <div class="container">
-          <div class="about-grid">
-            <div class="about-content">
-              <h2>Nuestra Historia</h2>
-              <p>
-                En MatchHogar transformamos la manera en que las personas encuentran su hogar ideal.
-                Nacimos de una idea simple pero poderosa: crear una comunidad donde compartir
-                vivienda no solo sea más accesible, sino también más enriquecedor.
-              </p>
-              <p>
-                Desde 2024, hemos ayudado a miles de personas a encontrar compañeros de piso
-                compatibles, inversores para proyectos inmobiliarios y oportunidades únicas
-                en el mercado de la vivienda. Nuestra plataforma no solo conecta espacios,
-                conecta personas con sueños similares.
-              </p>
-              <p>
-                Lo que nos hace únicos es nuestro compromiso con la seguridad y la
-                compatibilidad. Utilizamos tecnología avanzada para garantizar las mejores
-                coincidencias, mientras mantenemos el toque humano que hace que cada
-                conexión sea especial.
-              </p>
+          <h2 class="section-title">Nuestra Historia</h2>
+          
+          <div class="timeline">
+            <div class="timeline-item">
+              <div class="timeline-icon">
+                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor">
+                  <path d="M12 2L2 7l10 5 10-5-10-5z"/>
+                  <path d="M2 17l10 5 10-5"/>
+                  <path d="M2 12l10 5 10-5"/>
+                </svg>
+              </div>
+              <div class="timeline-content">
+                <span class="date">2024</span>
+                <h3>El Inicio</h3>
+                <p>Nacimos con una visión clara: revolucionar la forma en que las personas encuentran su hogar ideal y compañeros de vida.</p>
+              </div>
             </div>
-            <div class="about-image">
-              <img src="assets/about-team.jpg" alt="Equipo MatchHogar trabajando en la oficina" />
+
+            <div class="timeline-item">
+              <div class="timeline-icon">
+                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor">
+                  <path d="M17 21v-2a4 4 0 0 0-4-4H5a4 4 0 0 0-4 4v2"/>
+                  <circle cx="9" cy="7" r="4"/>
+                  <path d="M23 21v-2a4 4 0 0 0-3-3.87"/>
+                  <path d="M16 3.13a4 4 0 0 1 0 7.75"/>
+                </svg>
+              </div>
+              <div class="timeline-content">
+                <span class="date">2024</span>
+                <h3>Primera Comunidad</h3>
+                <p>Conectamos nuestros primeros 100 usuarios, creando historias de éxito que definieron nuestro camino.</p>
+              </div>
+            </div>
+
+            <div class="timeline-item">
+              <div class="timeline-icon">
+                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor">
+                  <path d="M3 9l9-7 9 7v11a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2z"/>
+                  <polyline points="9 22 9 12 15 12 15 22"/>
+                </svg>
+              </div>
+              <div class="timeline-content">
+                <span class="date">2025</span>
+                <h3>Expansión Nacional</h3>
+                <p>Alcanzamos presencia en las principales ciudades de España, ayudando a más de 1,000 personas a encontrar su hogar ideal.</p>
+              </div>
+            </div>
+
+            <div class="timeline-item">
+              <div class="timeline-icon">
+                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor">
+                  <path d="M20.84 4.61a5.5 5.5 0 0 0-7.78 0L12 5.67l-1.06-1.06a5.5 5.5 0 0 0-7.78 7.78l1.06 1.06L12 21.23l7.78-7.78 1.06-1.06a5.5 5.5 0 0 0 0-7.78z"/>
+                </svg>
+              </div>
+              <div class="timeline-content">
+                <span class="date">Hoy</span>
+                <h3>Una Comunidad Creciente</h3>
+                <p>Seguimos innovando y creciendo, con miles de conexiones exitosas y una comunidad que comparte nuestros valores.</p>
+              </div>
+            </div>
+          </div>
+
+          <div class="stats-grid">
+            <div class="stat-card">
+              <h3>5,000+</h3>
+              <p>Usuarios Activos</p>
+            </div>
+            <div class="stat-card">
+              <h3>1,000+</h3>
+              <p>Matches Exitosos</p>
+            </div>
+            <div class="stat-card">
+              <h3>15</h3>
+              <p>Ciudades</p>
+            </div>
+            <div class="stat-card">
+              <h3>98%</h3>
+              <p>Satisfacción</p>
             </div>
           </div>
         </div>
