--- a/quienes-somos.html
+++ b/quienes-somos.html
@@ -184,9 +184,38 @@
 
       <section class="cta-section">
         <div class="container">
-          <h2>¿Listo para encontrar tu match perfecto?</h2>
-          <p>Únete a nuestra comunidad y encuentra las personas ideales para compartir tu próximo hogar.</p>
-          <a href="registro.html" class="btn btn-primary">Comenzar Ahora</a>
+          <div class="cta-content">
+            <h2>¿Listo para encontrar tu match perfecto?</h2>
+            <div class="cta-features">
+              <div class="cta-feature">
+                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor">
+                  <circle cx="12" cy="12" r="10"/>
+                  <path d="M12 8v8"/>
+                  <path d="M8 12h8"/>
+                </svg>
+                <span>Registro Gratuito</span>
+              </div>
+              <div class="cta-feature">
+                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor">
+                  <path d="M1 12s4-8 11-8 11 8 11 8-4 8-11 8-11-8-11-8z"/>
+                  <circle cx="12" cy="12" r="3"/>
+                </svg>
+                <span>Visualiza Perfiles</span>
+              </div>
+              <div class="cta-feature">
+                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor">
+                  <path d="M22 11.08V12a10 10 0 1 1-5.93-9.14"/>
+                  <polyline points="22 4 12 14.01 9 11.01"/>
+                </svg>
+                <span>Match Instantáneo</span>
+              </div>
+            </div>
+            <div class="cta-actions">
+              <a href="registro.html" class="btn btn-primary">Comenzar Ahora</a>
+              <a href="que-ofrecemos.html" class="btn btn-outline">Saber Más</a>
+            </div>
+            <p class="cta-note">Ya somos más de 5,000 usuarios conectando sueños y hogares</p>
+          </div>
         </div>
       </section>
     </main>
