--- a/que-ofrecemos.html
+++ b/que-ofrecemos.html
@@ -210,13 +210,53 @@
         </div>
       </section>
 
-      <section class="cta-section">
+      <section class="cta-section offers-cta">
         <div class="container">
-          <h2>¿Listo para comenzar?</h2>
-          <p>Únete a miles de usuarios que ya han encontrado su match perfecto.</p>
-          <div class="cta-buttons">
-            <a href="registro.html" class="btn btn-primary">Registrarse ahora</a>
-            <a href="quienes-somos.html" class="btn btn-outline">Saber más</a>
+          <div class="cta-content">
+            <h2>¿Listo para comenzar?</h2>
+            <div class="cta-cards">
+              <div class="quick-start-card">
+                <div class="card-icon">
+                  <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor">
+                    <path d="M23 6l-9.5 9.5-5-5L1 18" />
+                    <path d="M17 6h6v6" />
+                  </svg>
+                </div>
+                <h3>Inicio Rápido</h3>
+                <ul>
+                  <li>Registro en 2 minutos</li>
+                  <li>Perfil básico gratis</li>
+                  <li>Acceso inmediato</li>
+                </ul>
+              </div>
+              <div class="guarantee-card">
+                <div class="card-icon">
+                  <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor">
+                    <path d="M12 22s8-4 8-10V5l-8-3-8 3v7c0 6 8 10 8 10z" />
+                  </svg>
+                </div>
+                <h3>Garantía MatchHogar</h3>
+                <ul>
+                  <li>Verificación de usuarios</li>
+                  <li>Chat seguro</li>
+                  <li>Soporte 24/7</li>
+                </ul>
+              </div>
+            </div>
+            <div class="cta-counter">
+              <span class="counter-number">5,000+</span>
+              <span class="counter-text">usuarios ya confían en nosotros</span>
+            </div>
+            <div class="cta-actions">
+              <a href="registro.html" class="btn btn-primary">
+                <span>Registrarse ahora</span>
+                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor">
+                  <line x1="5" y1="12" x2="19" y2="12" />
+                  <polyline points="12 5 19 12 12 19" />
+                </svg>
+              </a>
+              <a href="quienes-somos.html" class="btn btn-outline">Conocer más</a>
+            </div>
           </div>
         </div>
       </section>
