--- a/quienes-somos.html
+++ b/quienes-somos.html
@@ -186,35 +186,45 @@
         <div class="container">
           <div class="cta-content">
             <h2>¿Listo para encontrar tu match perfecto?</h2>
-            <div class="cta-features">
-              <div class="cta-feature">
-                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor">
-                  <circle cx="12" cy="12" r="10"/>
-                  <path d="M12 8v8"/>
-                  <path d="M8 12h8"/>
-                </svg>
-                <span>Registro Gratuito</span>
+            <div class="cta-cards">
+              <div class="quick-start-card">
+                <div class="card-icon">
+                  <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor">
+                    <path d="M23 6l-9.5 9.5-5-5L1 18" />
+                    <path d="M17 6h6v6" />
+                  </svg>
+                </div>
+                <h3>Comienza Gratis</h3>
+                <ul>
+                  <li>Sin compromisos</li>
+                  <li>Acceso inmediato</li>
+                  <li>Soporte incluido</li>
+                </ul>
               </div>
-              <div class="cta-feature">
-                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor">
-                  <path d="M1 12s4-8 11-8 11 8 11 8-4 8-11 8-11-8-11-8z"/>
-                  <circle cx="12" cy="12" r="3"/>
-                </svg>
-                <span>Visualiza Perfiles</span>
-              </div>
-              <div class="cta-feature">
-                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor">
-                  <path d="M22 11.08V12a10 10 0 1 1-5.93-9.14"/>
-                  <polyline points="22 4 12 14.01 9 11.01"/>
-                </svg>
-                <span>Match Instantáneo</span>
+              <div class="guarantee-card">
+                <div class="card-icon">
+                  <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor">
+                    <path d="M12 22s8-4 8-10V5l-8-3-8 3v7c0 6 8 10 8 10z" />
+                  </svg>
+                </div>
+                <h3>¿Buscas más beneficios?</h3>
+                <ul>
+                  <li>Perfil destacado</li>
+                  <li>Filtros avanzados</li>
+                  <li>Chat ilimitado</li>
+                </ul>
               </div>
             </div>
             <div class="cta-actions">
-              <a href="registro.html" class="btn btn-primary">Comenzar Ahora</a>
-              <a href="que-ofrecemos.html" class="btn btn-outline">Saber Más</a>
+              <a href="registro-basico.html" class="btn btn-primary">
+                <span>Registro Gratuito</span>
+                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor">
+                  <line x1="5" y1="12" x2="19" y2="12" />
+                  <polyline points="12 5 19 12 12 19" />
+                </svg>
+              </a>
+              <a href="registro-premium.html" class="btn btn-outline">Explorar Premium</a>
             </div>
-            <p class="cta-note">Ya somos más de 5,000 usuarios conectando sueños y hogares</p>
           </div>
         </div>
       </section>
