--- a/quienes-somos.html
+++ b/quienes-somos.html
@@ -27,12 +27,42 @@
       </nav>
     </header>    <!-- ============================ MAIN =========================== -->
     <main>
-      <section class="hero about-hero">
+      <section class="compact-hero about-hero">
         <div class="container">
-          <h1>Quiénes Somos</h1>
-          <p class="tagline">
-            Conectando personas, creando hogares, construyendo comunidad
-          </p>
+          <div class="hero-content">
+            <div class="hero-text">
+              <h1>Quiénes Somos</h1>
+              <div class="hero-details">
+                <div class="detail-item">
+                  <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor">
+                    <path d="M12 2L2 7l10 5 10-5-10-5z"/>
+                    <path d="M2 17l10 5 10-5"/>
+                    <path d="M2 12l10 5 10-5"/>
+                  </svg>
+                  <span>Fundada en 2024</span>
+                </div>
+                <div class="detail-item">
+                  <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor">
+                    <path d="M17 21v-2a4 4 0 0 0-4-4H5a4 4 0 0 0-4 4v2"/>
+                    <circle cx="9" cy="7" r="4"/>
+                    <path d="M23 21v-2a4 4 0 0 0-3-3.87"/>
+                    <path d="M16 3.13a4 4 0 0 1 0 7.75"/>
+                  </svg>
+                  <span>+5,000 Usuarios Activos</span>
+                </div>
+                <div class="detail-item">
+                  <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor">
+                    <path d="M3 9l9-7 9 7v11a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2z"/>
+                    <polyline points="9 22 9 12 15 12 15 22"/>
+                  </svg>
+                  <span>15 Ciudades</span>
+                </div>
+              </div>
+              <p class="tagline">
+                Conectando personas, creando hogares, construyendo comunidad
+              </p>
+            </div>
+          </div>
         </div>
       </section>
 
