--- a/quienes-somos.html
+++ b/quienes-somos.html
@@ -30,160 +30,85 @@
       <section class="compact-hero about-hero">
         <div class="container">
           <div class="hero-content">
-            <div class="hero-text">
-              <h1>Quiénes Somos</h1>
-              <div class="hero-details">
-                <div class="detail-item">
-                  <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor">
-                    <path d="M12 2L2 7l10 5 10-5-10-5z"/>
-                    <path d="M2 17l10 5 10-5"/>
-                    <path d="M2 12l10 5 10-5"/>
-                  </svg>
-                  <span>Fundada en 2024</span>
-                </div>
-                <div class="detail-item">
-                  <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor">
-                    <path d="M17 21v-2a4 4 0 0 0-4-4H5a4 4 0 0 0-4 4v2"/>
-                    <circle cx="9" cy="7" r="4"/>
-                    <path d="M23 21v-2a4 4 0 0 0-3-3.87"/>
-                    <path d="M16 3.13a4 4 0 0 1 0 7.75"/>
-                  </svg>
-                  <span>+5,000 Usuarios Activos</span>
-                </div>
-                <div class="detail-item">
-                  <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor">
-                    <path d="M3 9l9-7 9 7v11a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2z"/>
-                    <polyline points="9 22 9 12 15 12 15 22"/>
-                  </svg>
-                  <span>15 Ciudades</span>
-                </div>
-              </div>
-              <p class="tagline">
-                Conectando personas, creando hogares, construyendo comunidad
-              </p>
-            </div>
-          </div>
-        </div>
-      </section>
-
-      <section class="about-section">
-        <div class="container">
-          <h2 class="section-title">Nuestra Historia</h2>
-          
-          <div class="timeline">
-            <div class="timeline-item">
-              <div class="timeline-icon">
+            <h1>Quiénes Somos</h1>
+            <p class="tagline">Conectando personas, creando hogares, construyendo comunidad</p>
+            <div class="hero-details">
+              <div class="detail-item">
                 <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor">
                   <path d="M12 2L2 7l10 5 10-5-10-5z"/>
                   <path d="M2 17l10 5 10-5"/>
                   <path d="M2 12l10 5 10-5"/>
                 </svg>
+                <span>Desde 2024</span>
               </div>
-              <div class="timeline-content">
-                <span class="date">2024</span>
-                <h3>El Inicio</h3>
-                <p>Nacimos con una visión clara: revolucionar la forma en que las personas encuentran su hogar ideal y compañeros de vida.</p>
-              </div>
-            </div>
-
-            <div class="timeline-item">
-              <div class="timeline-icon">
+              <div class="detail-item">
                 <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor">
                   <path d="M17 21v-2a4 4 0 0 0-4-4H5a4 4 0 0 0-4 4v2"/>
                   <circle cx="9" cy="7" r="4"/>
                   <path d="M23 21v-2a4 4 0 0 0-3-3.87"/>
                   <path d="M16 3.13a4 4 0 0 1 0 7.75"/>
                 </svg>
+                <span>5,000+ Usuarios</span>
               </div>
-              <div class="timeline-content">
-                <span class="date">2024</span>
-                <h3>Primera Comunidad</h3>
-                <p>Conectamos nuestros primeros 100 usuarios, creando historias de éxito que definieron nuestro camino.</p>
-              </div>
-            </div>
-
-            <div class="timeline-item">
-              <div class="timeline-icon">
+              <div class="detail-item">
                 <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor">
                   <path d="M3 9l9-7 9 7v11a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2z"/>
                   <polyline points="9 22 9 12 15 12 15 22"/>
                 </svg>
+                <span>15 Ciudades</span>
               </div>
-              <div class="timeline-content">
-                <span class="date">2025</span>
-                <h3>Expansión Nacional</h3>
-                <p>Alcanzamos presencia en las principales ciudades de España, ayudando a más de 1,000 personas a encontrar su hogar ideal.</p>
-              </div>
-            </div>
-
-            <div class="timeline-item">
-              <div class="timeline-icon">
-                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor">
-                  <path d="M20.84 4.61a5.5 5.5 0 0 0-7.78 0L12 5.67l-1.06-1.06a5.5 5.5 0 0 0-7.78 7.78l1.06 1.06L12 21.23l7.78-7.78 1.06-1.06a5.5 5.5 0 0 0 0-7.78z"/>
-                </svg>
-              </div>
-              <div class="timeline-content">
-                <span class="date">Hoy</span>
-                <h3>Una Comunidad Creciente</h3>
-                <p>Seguimos innovando y creciendo, con miles de conexiones exitosas y una comunidad que comparte nuestros valores.</p>
-              </div>
-            </div>
-          </div>
-
-          <div class="stats-grid">
-            <div class="stat-card">
-              <h3>5,000+</h3>
-              <p>Usuarios Activos</p>
-            </div>
-            <div class="stat-card">
-              <h3>1,000+</h3>
-              <p>Matches Exitosos</p>
-            </div>
-            <div class="stat-card">
-              <h3>15</h3>
-              <p>Ciudades</p>
-            </div>
-            <div class="stat-card">
-              <h3>98%</h3>
-              <p>Satisfacción</p>
             </div>
           </div>
         </div>
       </section>
 
-      <section class="values-section">
+      <section class="history-section">
         <div class="container">
-          <h2>Nuestros Valores</h2>
-          <div class="values-grid">
-            <div class="value-card">
-              <div class="value-icon">
+          <div class="history-grid">
+            <div class="history-card">
+              <div class="history-icon">
                 <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor">
-                  <path d="M12 21a9 9 0 1 0 0-18 9 9 0 0 0 0 18z"/>
-                  <path d="M12 13a3 3 0 1 0 0-6 3 3 0 0 0 0 6z"/>
+                  <path d="M12 2L2 7l10 5 10-5-10-5z"/>
+                  <path d="M2 17l10 5 10-5"/>
+                  <path d="M2 12l10 5 10-5"/>
                 </svg>
               </div>
-              <h3>Transparencia</h3>
-              <p>Creemos en la honestidad y la claridad en todas nuestras interacciones.</p>
+              <h3>Nuestra Misión</h3>
+              <p>Transformar la forma en que las personas encuentran y comparten espacios habitacionales, creando conexiones significativas.</p>
             </div>
-            <div class="value-card">
-              <div class="value-icon">
+
+            <div class="history-card">
+              <div class="history-icon">
                 <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor">
-                  <path d="M4 12v8a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2v-8"/>
-                  <path d="M16 6l-4-4-4 4"/>
-                  <path d="M12 2v13"/>
+                  <circle cx="12" cy="12" r="10"/>
+                  <path d="M12 16l4-4-4-4"/>
+                  <path d="M8 12h8"/>
                 </svg>
               </div>
-              <h3>Confianza</h3>
-              <p>Construimos relaciones sólidas basadas en la confianza mutua.</p>
+              <h3>Trayectoria</h3>
+              <p>Desde 2024 hemos conectado más de 1,000 personas con su hogar ideal y compañeros de vida compatibles.</p>
             </div>
-            <div class="value-card">
-              <div class="value-icon">
+
+            <div class="history-card">
+              <div class="history-icon">
+                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor">
+                  <path d="M21 16V8a2 2 0 0 0-1-1.73l-7-4a2 2 0 0 0-2 0l-7 4A2 2 0 0 0 3 8v8a2 2 0 0 0 1 1.73l7 4a2 2 0 0 0 2 0l7-4A2 2 0 0 0 21 16z"/>
+                  <path d="M3.29 7L12 12l8.71-5"/>
+                  <path d="M12 22V12"/>
+                </svg>
+              </div>
+              <h3>Innovación</h3>
+              <p>Combinamos tecnología avanzada con un toque humano para ofrecer las mejores coincidencias en vivienda compartida.</p>
+            </div>
+
+            <div class="history-card">
+              <div class="history-icon">
                 <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor">
                   <path d="M20.84 4.61a5.5 5.5 0 0 0-7.78 0L12 5.67l-1.06-1.06a5.5 5.5 0 0 0-7.78 7.78l1.06 1.06L12 21.23l7.78-7.78 1.06-1.06a5.5 5.5 0 0 0 0-7.78z"/>
                 </svg>
               </div>
               <h3>Comunidad</h3>
-              <p>Fomentamos conexiones significativas y duraderas entre nuestros usuarios.</p>
+              <p>Construimos una comunidad vibrante donde la confianza y el respeto son fundamentales.</p>
             </div>
           </div>
         </div>
