--- a/que-ofrecemos.html
+++ b/que-ofrecemos.html
@@ -11,12 +11,9 @@
     <header>
       <nav class="container">
         <div class="nav-brand">
-          <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 64 64" aria-hidden="true">
-            <path d="M2 33L32 6l30 27" class="stroke-navy" />
-            <path d="M10 30v28h14V44h16v14h14V30" class="stroke-orange" />
-            <path d="M40 28c0 7-8 11-8 11s-8-4-8-11a8 8 0 0116 0z" class="stroke-orange" />
-          </svg>
-          <span>MatchHogar</span>
+          <a href="index.html">
+            <img src="public/MatchHogar.jpg" alt="Logo MatchHogar" class="nav-logo">
+          </a>
         </div>
         <ul class="nav-links">
           <li><a href="index.html">Inicio</a></li>
