--- a/quienes-somos.html
+++ b/quienes-somos.html
@@ -11,12 +11,9 @@
     <header>
       <nav class="container">
         <div class="nav-brand">
-          <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 64 64" aria-hidden="true">
-            <path d="M2 33L32 6l30 27" class="stroke-navy" />
-            <path d="M10 30v28h14V44h16v14h14V30" class="stroke-orange" />
-            <path d="M40 28c0 7-8 11-8 11s-8-4-8-11a8 8 0 0116 0z" class="stroke-orange" />
-          </svg>
-          <span>MatchHogar</span>
+          <a href="index.html">
+            <img src="public/MatchHogar.jpg" alt="Logo MatchHogar" class="nav-logo">
+          </a>
         </div>
         <ul class="nav-links">
           <li><a href="index.html">Inicio</a></li>
@@ -65,7 +62,7 @@
 
             <div class="history-card">
               <div class="history-icon">
-                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor">
+                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor"></svg>
                   <path d="M21 16V8a2 2 0 0 0-1-1.73l-7-4a2 2 0 0 0-2 0l-7 4A2 2 0 0 0 3 8v8a2 2 0 0 0 1 1.73l7 4a2 2 0 0 0 2 0l7-4A2 2 0 0 0 21 16z"/>
                   <path d="M3.29 7L12 12l8.71-5"/>
                   <path d="M12 22V12"/>
@@ -77,7 +74,7 @@
 
             <div class="history-card">
               <div class="history-icon">
-                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor">
+                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor"></svg>
                   <path d="M20.84 4.61a5.5 5.5 0 0 0-7.78 0L12 5.67l-1.06-1.06a5.5 5.5 0 0 0-7.78 7.78l1.06 1.06L12 21.23l7.78-7.78 1.06-1.06a5.5 5.5 0 0 0 0-7.78z"/>
                 </svg>
               </div>
